syntax = "proto3";

package tenant;

service TenantService {
  rpc GetTenant(GetTenantRequest) returns (GetTenantResponse);
  rpc ListTenants(ListTenantsRequest) returns (ListTenantsResponse);
  rpc CreateTenant(CreateTenantRequest) returns (CreateTenantResponse);
  rpc UpdateTenant(UpdateTenantRequest) returns (UpdateTenantResponse);
  rpc DeleteTenant(DeleteTenantRequest) returns (DeleteTenantResponse);
}

message Tenant {
  string id = 1;
  string name = 2;
  string created_at = 3;
  string updated_at = 4;
}

message GetTenantRequest {
  string id = 1;
}

message GetTenantResponse {
  Tenant tenant = 1;
}

message ListTenantsRequest {
  optional uint64 limit = 1;
  optional uint64 offset = 2;
}

message ListTenantsResponse {
  repeated Tenant tenants = 1;
  uint64 total_count = 2;
}

message CreateTenantRequest {
  string name = 1;
}

message CreateTenantResponse {
  Tenant tenant = 1;
}

message UpdateTenantRequest {
  string id = 1;
  optional string name = 2;
}

message UpdateTenantResponse {
  Tenant tenant = 1;
}

message DeleteTenantRequest {
  string id = 1;
}

message DeleteTenantResponse {}
